--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,9 @@ dependencies {
             "ch.qos.logback:logback-classic:${logbackVersion}",
             "com.fasterxml.jackson.core:jackson-annotations:${jacksonAnnotations}",
             "junit:junit:${junitVersion}",
-            "org.assertj:assertj-core:${assertJVersion}"
+            "org.assertj:assertj-core:${assertJVersion}",
+            "net.serenity-bdd:serenity-rest-assured:${serenityCoreVersion}",
+            "net.serenity-bdd:serenity-screenplay-rest:${serenityCoreVersion}"
 
 
 
