--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=RetoTecnico
 # NOMBRE DEL PROYECTO PARA SONAR
 sonar.projectName=RetoTecnico
 # VERSIÓN DE LA EJECUCIÓN DEL PROYECTO
-sonar.projectVersion=0.1
+sonar.projectVersion=0.2
 # DIRECTORIO QUE QUIERO ESCANEAR
 # Comma-separated paths to directories with sources (required)
 sonar.sources=./src/main/java
@@ -17,3 +17,5 @@ sonar.my.property=value
 sonar.java.coveragePlugin=jacoco
 #CARPETA SOBRE LA CUAL SE GENERA EL CODIGO EN TIEMPO DE COMPILACIÓN, SI LA DESCONOCE FIJAR "src" COMO VALOR POR DEFECTO
 sonar.java.binaries=./src/main/java
+
+sonar.host.url=http://54.173.113.48:9000/
