--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -2,7 +2,7 @@ webdriver {
   driver = chrome
   autodownload = true
 }
-headless.mode = true
+headless.mode = false
 
 #
 # Chrome options can be defined using the chrome.switches property
